Fix SonarCloud code smells.

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -22,6 +22,7 @@
 <div class="container">
     <h1>TODO REST API</h1>
     <ul>
+        <li><a target="_blank" href="https://sivalabs-todo-api-spring-boot.herokuapp.com/">Demo on Heroku</a></li>
         <li><a target="_blank" href="https://sivalabs-todo-api-spring-boot.herokuapp.com/swagger-ui.html">Swagger UI</a></li>
         <li><a target="_blank" href="https://sonarcloud.io/dashboard?id=com.sivalabs%3Atodo-api-spring-boot">SonarCloud</a></li>
         <li><a target="_blank" href="https://cloud.docker.com/u/sivaprasadreddy/repository/docker/sivaprasadreddy/todo-api-spring-boot">DockerHub</a></li>
